--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,10 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-search-autocomplete": "^8.2.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
