--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^6.8.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "razorpay": "^2.8.4",
     "redis": "^4.5.1"
   }
 }
